--- a/index.html
+++ b/index.html
@@ -1272,8 +1272,9 @@
                                 </div>
                                 <div class="sc-cBNfnY cHGPOa">
                                     <div data-testid="StyledContainer" class="sc-bdfBwQ sc-bBXqnf ctA-DeV hbzOeu group">
-                                        <a href="https://asli.bangoostdigital.store/" target="_blank" rel="noopener"
-                                            data-testid="LinkButton" class="sc-pFZIQ sc-fKFyDc ldGKnQ hzhcpT group"
+                                        <a href="https://www.instagram.com/bangoostdigital.id/" target="_blank"
+                                            rel="noopener" data-testid="LinkButton"
+                                            class="sc-pFZIQ sc-fKFyDc ldGKnQ hzhcpT group"
                                             aria-describedby="profile-bangoostdigital " height="auto">
                                             <div data-testid="LinkThumbnail"
                                                 class="sc-bdfBwQ sc-gsTCUz sc-hHftDr dgVnpq bhdLno bcLNlF">
@@ -1298,7 +1299,7 @@
                                 </div>
                                 <div class="sc-cBNfnY cHGPOa">
                                     <div data-testid="StyledContainer" class="sc-bdfBwQ sc-bBXqnf ctA-DeV hbzOeu group">
-                                        <a href="https://asli.bangoostdigital.store/" target="_blank" rel="noopener"
+                                        <a href="https://bangoostdigital.store/" target="_blank" rel="noopener"
                                             data-testid="LinkButton" class="sc-pFZIQ sc-fKFyDc ldGKnQ hzhcpT group"
                                             aria-describedby="profile-bangoostdigital " height="auto">
                                             <div data-testid="LinkThumbnail"
