--- a/index.html
+++ b/index.html
@@ -1272,7 +1272,7 @@
                                 </div>
                                 <div class="sc-cBNfnY cHGPOa">
                                     <div data-testid="StyledContainer" class="sc-bdfBwQ sc-bBXqnf ctA-DeV hbzOeu group">
-                                        <a href="https://www.instagram.com/bangoostdigital.id/" target="_blank"
+                                        <a href="https://asli.bangoostdigital.store/" target="_blank"
                                             rel="noopener" data-testid="LinkButton"
                                             class="sc-pFZIQ sc-fKFyDc ldGKnQ hzhcpT group"
                                             aria-describedby="profile-bangoostdigital " height="auto">
